mescc: Change --align to --align=functions, --align=globals.
This makes function alignment optional and disables function alignment
when using MesCC-Tools 0.5.2 (numbered architecture).

* module/mescc.scm (parse-opts): Make --align take a value.
* module/mescc/mescc.scm (mescc:compile, infos->hex2): Parse it and pass
it as renamed #:align keyword argument to ...
* module/mescc/M1.scm (infos->M1): ...here.  Rename parameter align? to
align, pass it to...
(info->M1): ...here.  Likewise.  Use it to make function alignment
optional.

--- a/doc/mes.texi
+++ b/doc/mes.texi
@@ -876,8 +876,9 @@ The @var{option}s can be among the following:
 
 @table @code
 
-@item --align
-align globals
+@item --align=@var{symbol}
+align @var{symbol}, the default is @code{functions}; other valid values
+are: @code{globals}.
 
 @item --base-address=ADRRESS
 use BaseAddress ADDRESS [0x1000000]
