--- a/README
+++ b/README
@@ -12,7 +12,7 @@ effort for UNIX-like operating systems.
 
 The Scheme interpreter is written in ~5,000 LOC of simple C, and the C
 compiler written in Scheme and these are mutual self-hosting.  This
-mes.c is [[https://github.com/oriansj/mes-m2][being simplified]] to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
+mes.c is now being simplified to be transpiled by [[https://github.com/oriansj/mes-m2]bto be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
 
 Mes has a Garbage Collector, a library of loadable Scheme modules--
 notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]], Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with
@@ -23,11 +23,14 @@ Mes+MesCC can compile an only [[http://gitlab.com/janneke/tinycc][lightly patche
 self-hosting.  Using this tcc and the Mes C library we now have a
 Reduced Binary Seed bootstrap for the gnutools triplet: glibc-2.2.5,
 binutils-2.20.1, gcc-2.95.3.  This is enough to bootstrap Guix for
-i686-linux and x86_64-linux.
+i686-linux, x86_64-linux, armhf-linux and aarch64-linux.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf][LISP-1.5]] -- John
 McCarthy page 13, GNU Guix's source/binary packaging transparency and
 Jeremiah Orians's [[https://github.com/oriansj/stage0][stage0]] ~500 byte self-hosting hex assembler.
+
+We are very grateful to NLNet for sponsoring the [[https://nlnet.nl/project/GNUMes][Reduced Binary Seed
+bootstrap]] and the [[https://nlnet.nl/project/GNUMes-arm][ARM port]].
 
 GNU Mes is free software, it is distributed under the terms of the GNU
 General Public Licence version 3 or later.  See the file [[file:COPYING][COPYING]].
@@ -64,17 +67,18 @@ General Public Licence version 3 or later.  See the file [[file:COPYING][COPYING
 
 * Links
   [0] https://www.gnu.org/software/mes
-  [1] https://guix.gnu.org/blog/2019/guix-reduces-bootstrap-seed-by-50/
+  [1] https://guix.gnu.org/blog/2020/guix-further-reduces-bootstrap-seed-to-25
   [2] https://www.gnu.org/software/guix
   [3] https://bootstrappable.org
-  [4] https://github.com/oriansj/mes-m2
-  [5] https://github.com/oriansj/m2-planet
-  [6] https://github.com/schemeway/lalr-scm
-  [7] https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html
-  [8] https://www.nongnu.org/nyacc
-  [9] https://gitlab.com/janneke/tinycc
-  [10] [[http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf]]
-  [11] https://github.com/oriansj/stage0
+  [4] https://github.com/oriansj/m2-planet
+  [5] https://github.com/schemeway/lalr-scm
+  [6] https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html
+  [7] https://www.nongnu.org/nyacc
+  [8] https://gitlab.com/janneke/tinycc
+  [9] [[http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf]]
+  [10] https://github.com/oriansj/stage0
+  [11] https://nlnet.nl/project/GNUMes
+  [12] https://nlnet.nl/project/GNUMes-arm
 
 * Legalese
 Copyright © 2016,2017,2018,2019 Jan (janneke) Nieuwenhuizen <[[mailto:janneke@gnu.org][janneke@gnu.org]]>
