--- a/doc/mes.texi
+++ b/doc/mes.texi
@@ -13,7 +13,7 @@
 @set OPENPGP-SIGNING-KEY-ID 1A858392E331EAFDB8C27FFBF3C1A0D9C1D65273
 
 @copying
-Copyright @copyright{} 2018,2019 Jan (janneke) Nieuwenhuizen@*
+Copyright @copyright{} 2018,2019,2020,2021 Jan (janneke) Nieuwenhuizen@*
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3 or
@@ -508,11 +508,11 @@ GNU Mes depends on the following packages:
 
 @itemize
 @item @url{http://gnu.org/software/guile/, GNU Guile}, version 2.0.13 or
-later, including 2.2.x;
+later, including 2.2.x and 3.0.x,
 @item @url{http://www.gnu.org/software/make/, GNU Make}.
-@item @url{https://savannah.gnu.org/projects/nyacc/, NYACC}, 0.93.0 or later, including 0.99.0.
-@item @url{http://gcc.gnu.org, GCC's gcc}, version 2.95.3 or later.
-@item @url{https://savannah.gnu.org/projects/mescc-tools/, mescc-tools}, version 0.6.1 or later,
+@item @url{https://savannah.gnu.org/projects/nyacc/, NYACC}, version 1.00.2,
+@item @url{http://gcc.gnu.org, GCC's gcc}, version 2.95.3 or later, including 10.2.0,
+@item @url{https://savannah.gnu.org/projects/mescc-tools/, mescc-tools}, version 0.7.0 or later,
 @end itemize
 
 @cindex Guile, compatibility
@@ -640,7 +640,7 @@ The Reduced Binary Seed bootstrap currently adopted by Guix@footnote{See
 @file{gnu/packages/commencement.scm} in the @var{master} branch in Guix
 git
 @url{http://git.savannah.gnu.org/cgit/guix.git/tree/gnu/packages/commencement.scm}}.
-In its intiial form it is only available for x86-linux.
+In its intiial form it is only available for x86-linux arm armhf-linux.
 
 Currently, it goes like this:
 
@@ -1053,12 +1053,12 @@ lives in the top build tree of Mes).
 @node Porting GNU Mes, The Perfect Setup, Running Mes From the Source Tree, Contributing
 @section Porting GNU Mes
 
-Mes was written for x86-linux.  A 64 bit (x86_64) is almost done, only a
-few bugs remain.  The Guix bootstrap for x86_64 uses x86 mes and that is
-not expected to change.
+Mes is supported for x86-linux and armhf-linux.  A 64 bit (x86_64-linux)
+is almost done, only a few bugs remain.  The Guix bootstrap for
+x86_64-linux uses mes for x86-lunix and that is not expected to change.
+Likewise, aarch64-linux uses mes for armhf-linux.
 
-An ARM (armv4/armv7l) linux port is underway.  A port to GNU/Hurd
-(x86-gnu) is also underway.
+A port to GNU/Hurd (x86-gnu) is underway.
 
 Initial scaffold, built by @file{build-aux/build-scaffold.sh}:
 @example
