--- a/README
+++ b/README
@@ -12,7 +12,7 @@ effort for UNIX-like operating systems.
 
 The Scheme interpreter is written in ~5,000 LOC of simple C, and the C
 compiler written in Scheme and these are mutual self-hosting.  This
-mes.c is now being simplified to be transpiled by [[https://github.com/oriansj/mes-m2]bto be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
+mes.c is now being simplified to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
 
 Mes has a Garbage Collector, a library of loadable Scheme modules--
 notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]], Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with
@@ -29,8 +29,8 @@ Mes is inspired by The Maxwell Equations of Software: [[http://www.softwareprese
 McCarthy page 13, GNU Guix's source/binary packaging transparency and
 Jeremiah Orians's [[https://github.com/oriansj/stage0][stage0]] ~500 byte self-hosting hex assembler.
 
-We are very grateful to NLNet for sponsoring the [[https://nlnet.nl/project/GNUMes][Reduced Binary Seed
-bootstrap]] and the [[https://nlnet.nl/project/GNUMes-arm][ARM port]].
+We are very grateful to NLNet for sponsoring the
+[[https://nlnet.nl/project/GNUMes][Reduced Binary Seed bootstrap]] and the [[https://nlnet.nl/project/GNUMes-arm][ARM port]].
 
 GNU Mes is free software, it is distributed under the terms of the GNU
 General Public Licence version 3 or later.  See the file [[file:COPYING][COPYING]].
