--- a/README
+++ b/README
@@ -19,7 +19,7 @@ notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]], Pre
 R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]] --and test suite, just enough to
 support a REPL and a C99 compiler: mescc.
 
-Mes+MesCC can compile an only [[http://gitlab.com/janneke/tinycc][lightly patched TinyCC]] that is
+Mes + MesCC + Mes C Library can build a [[https://gitlab.com/janneke/tinycc][bootstrappable TinyCC]] that is
 self-hosting.  Using this tcc and the Mes C library we now have a
 Reduced Binary Seed bootstrap for the gnutools triplet: glibc-2.2.5,
 binutils-2.20.1, gcc-2.95.3.  This is enough to bootstrap Guix for
